# USD-Viewer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  License.txt  vcpkg.json
.github/workflows/: build.yml
scripts/: build_test_and_package.ps1  pack_to_single_file.ps1
src/: main.cpp
tests/: test_main.cpp
